--- a/root_converter.ipynb
+++ b/root_converter.ipynb
@@ -184,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree.SetEntries\n",
+    "# tree.SetEntries\n",
     "for i in range(events):\n",
     "    for data in data_channels[int(points_per_event*i):int(points_per_event*(i+1))]:\n",
     "        ch1.push_back(data[0])\n",
