--- a/root_converter.ipynb
+++ b/root_converter.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -124,14 +124,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.2 200.0\n"
+      "0.2 200.0\n",
+      "200.0\n"
      ]
     }
    ],
@@ -139,7 +140,7 @@
     "time_per_event_in_ns = timestep_in_ns/(points_per_event)\n",
     "print(time_per_event_in_ns,timestep_in_ns)\n",
     "timesteps_in_ns = np.arange(0,timestep_in_ns,time_per_event_in_ns)\n",
-    "# print(timesteps_in_ns)"
+    "print(timestep_in_ns)"
    ]
   },
   {
