Getting ready for upload

--- a/src/notebooks/root_converter.ipynb
+++ b/src/notebooks/root_converter.ipynb
@@ -25,11 +25,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# df1 = pd.read_csv('3052B-1.dat','Channel 1')\n",
-    "# df2 = pd.read_csv('3052B-2.dat','Channel 2')\n",
-    "# res = pd.concat([df1,df2],axis=1)\n",
-    "# res.to_csv('merged.dat',index=False)"
+    "def merge_files(file_ch1, file_ch2):\n",
+    "    df1 = pd.read_csv(file_ch1,'Channel 1',engine='python')\n",
+    "    df2 = pd.read_csv(file_ch2,'Channel 2',engine='python')\n",
+    "    res = pd.concat([df1,df2],axis=1)\n",
+    "    res.to_csv('merged_channels.dat',index=False)"
    ]
   },
   {
@@ -38,18 +38,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt = np.genfromtxt('merged.dat',delimiter=',', usecols=[0,1], invalid_raise=False)"
+    "file1 = './Labs/muon_271119/Run3/3052B-01_1_1_113001_2010_191127-175401.dat'\n",
+    "file2 = './Labs/muon_271119/Run3/3052B-01_2_2_113002_1410_191127-175401.dat'\n",
+    "\n",
+    "merge_files(file1, file2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt = np.genfromtxt('merged_channels.dat',delimiter=',', usecols=[0,1], invalid_raise=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "timestep_in_s = 10*dt[7,0]\n",
+    "timestep_in_ns = timestep_in_s*1E9\n",
+    "ayy = dt[9,0]\n",
+    "no_events = dt[10,0]\n",
+    "print(no_events)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time per event: 200.0 ns\n"
+     ]
+    }
+   ],
    "source": [
-    "timestep_in_s = dt[7,0]\n",
-    "ayy = dt[9,0]\n",
-    "no_events = dt[10,0]"
+    "print(\"Time per event: {time} ns\" .format(time = timestep_in_ns ))"
    ]
   },
   {
@@ -58,7 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "points_per_event = int(round(10*timestep_in_s/ayy))"
+    "data_channels = dt[13:]\n",
+    "total_size = data_channels[:,0].size"
    ]
   },
   {
@@ -70,55 +117,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "500\n"
+      "Number of point per events 1000\n",
+      "Number of events: 1000\n"
      ]
     }
    ],
    "source": [
-    "print(points_per_event)"
+    "points_per_event = int(round(timestep_in_s/ayy))\n",
+    "print('Number of point per events {points}'.format(points=points_per_event))\n",
+    "events = total_size//points_per_event\n",
+    "print('Number of events: {events}'.format(events=events))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_channels = dt[13:]\n",
-    "total_size = data_channels[:,0].size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "0.2 200.0\n",
+      "200.0\n"
      ]
     }
    ],
    "source": [
-    "events = total_size//points_per_event\n",
-    "print(events)"
+    "time_per_event_in_ns = timestep_in_ns/(points_per_event)\n",
+    "print(time_per_event_in_ns,timestep_in_ns)\n",
+    "timesteps_in_ns = np.arange(0,timestep_in_ns,time_per_event_in_ns)\n",
+    "print(timestep_in_ns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time_per_event_in_s = timestep_in_s*(points_per_event-1)\n",
-    "timesteps_in_s = np.arange(0,time_per_event_in_s,timestep_in_s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,16 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ROOT.TBranchElement object (\"timesteps\") at 0x5625285cae90>"
+       "<ROOT.TBranchElement object (\"timesteps\") at 0x561edf782ce0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,16 +188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# tree.SetEntries\n",
     "for i in range(events):\n",
     "    for data in data_channels[int(points_per_event*i):int(points_per_event*(i+1))]:\n",
     "        ch1.push_back(data[0])\n",
     "        ch2.push_back(data[1])    \n",
     "    for i in range(points_per_event):  \n",
-    "        timesteps.push_back(timesteps_in_s[i])\n",
+    "        timesteps.push_back(timesteps_in_ns[i])\n",
     "    tree.Fill()\n",
     "    ch1.clear()\n",
     "    ch1.shrink_to_fit()\n",
@@ -175,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +224,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RDF = ROOT.RDataFrame"
+    "N = events\n",
+    "x_ch1 = np.empty((N,points_per_event))\n",
+    "x_ch2 = np.empty((N,points_per_event))\n",
+    "for i in range(N):\n",
+    "    tempch1 = []\n",
+    "    tempch2 = []\n",
+    "    for data in data_channels[int(points_per_event*i):int(points_per_event*(i+1))]:\n",
+    "        tempch1.append(data[0])\n",
+    "        tempch2.append(data[1])        \n",
+    "    temp2ch1 = np.asarray(tempch1)\n",
+    "    temp2ch2 = np.asarray(tempch2)\n",
+    "    x_ch1[i] = np.transpose(temp2ch1)  \n",
+    "    x_ch2[i] = np.transpose(temp2ch2) "
    ]
   },
   {
@@ -198,53 +245,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = RDF('channels','testing1.root')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for name in df.GetColumnNames():\n",
-    "#     print(name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# csv_test = df.AsNumpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pd_df = pd.DataFrame(csv_test['timesteps'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pd_df1 = pd_df.drop_duplicates"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pd_df.size"
+    "# np.savetxt('ch1_values.csv', x_ch1, fmt=\"%1.4f\", delimiter=\",\")\n",
+    "# np.savetxt('ch2_values.csv', x_ch2, fmt=\"%1.4f\", delimiter=\",\")\n",
+    "np.savetxt('ch1_events_per_col.csv', np.transpose(x_ch1), fmt=\"%1.4f\", delimiter=\",\")\n",
+    "np.savetxt('ch2_events_per_col.csv', np.transpose(x_ch2), fmt=\"%1.4f\", delimiter=\",\")"
    ]
   },
   {
@@ -252,35 +256,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "readHeaders = False"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "x1 = ROOT.RDF.MakeCsvDataFrame('ch1_values.csv',readHeaders)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x1.Snapshot('ch1','ch1RDF.root')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x2 = ROOT.RDF.MakeCsvDataFrame('ch2_values.csv',readHeaders)\n",
+    "x2.Snapshot('ch2','ch2RDF.root')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "x1 = ROOT.RDF.MakeCsvDataFrame('ch1_events_per_col.csv',readHeaders)\n",
+    "x1.Snapshot('ch1','ch1RDF.root')"
+   ]
   },
   {
    "cell_type": "code",
