start using uproot instead of RDataFrames

--- a/src/notebooks/single_analysis_test.ipynb
+++ b/src/notebooks/single_analysis_test.ipynb
@@ -54,13 +54,21 @@
    "source": [
     "# rel_path = \"Labs/lab_11122019/\"\n",
     "# rel_path = \"Labs/muon_271119/Run1/\"\n",
-    "rel_path = \"Labs/lab_11122019/\"\n",
+    "# rel_path = \"Labs/lab_11122019/\"\n",
+    "rel_path = \"Labs/muon_191219/\"\n",
     "df = pd.read_csv(rel_path + 'ch1_test.csv', header=None)\n",
     "with open(rel_path+\"event_information.log\", \"r\") as f:\n",
     "        info = f.readlines()\n",
     "        n_events = int(info[0].split()[-1])\n",
     "        n_per_event = int(info[1].split()[-1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
